# finetune_paligemma2_scienceqa

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  COMMANDS.md  LICENSE  README.md  index.html  objects.inv  package-lock.json  pyproject.toml  report.html  tasks.py
.dvc/: config
.github/agents/: dtu_mlops_agent.md
.github/workflows/: data-change.yaml  docs.yaml  linting.yaml  model-registry-change.yaml  tests.yaml
api/: index.html
architecture/: index.html
cloud/: cloudbuild.api.yaml  create_build_trigger.sh  demo_api.sh  fetch_secrets.sh  run_baseline_and_sweep.sh  run_optimize.sh  setup_monitoring.py  vertex_config.template.yaml  vertex_optimize.template.yaml
configs/: __init__.py  sweep.yaml
configs/data/: __init__.py  scienceqa.yaml
configs/model/: __init__.py  paligemma2.yaml
configs/trainer/: __init__.py  default.yaml
data/raw/: .gitignore
dockerfiles/: api.dockerfile  train.dockerfile
docs/: README.md  mkdocs.yaml
docs/source/: api.md  architecture.md  index.md  reference.md  usage.md
models/: model.pt
reference/: index.html
reports/: README.md  RESULTS.md  report.html  report.py
reports/eval/: production_eval_results.json  prune_finetune_results.json
reports/load/: README.md  scienceqa_failures.csv  scienceqa_stats.csv  scienceqa_stats_history.csv
reports/monitoring/: drift_report.html
reports/profiling/: dataloader_profile.md
search/: search_index.json
src/project_name/: __init__.py  api.py  bento_service.py  data.py  evaluate.py  frontend.py  model.py  predict.py  train.py  visualize.py
src/scipali/models/: model.py  optimize.py  visualize.py
src/scipali/monitoring/: monitoring.py
src/scipali/serving/: api.py  bento_service.py  frontend.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py  test_monitoring.py  test_optimize.py  test_predict.py
tests/load/: locustfile.py
usage/: index.html
