[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv_build]
source-dir = "src"

[project]
name = "project_name"
version = "0.0.1"
description = "a short description"
authors = [
  { name = "Yuxin_Duc", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "datasets>=4.8.5",
    "dvc[gs]>=3.67.1",
    "fastapi==0.115.6",
    "gcloud>=0.18.3",
    "google-cloud-storage>=3.10.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "matplotlib>=3.10.9",
    "peft>=0.19.1",
    "pre-commit>=4.1.0",
    "rich>=15.0.0",
    "snakeviz>=2.2.2",
    "tensorboard>=2.20.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.9.0",
    "typer>=0.16.0",
    "uvicorn==0.34.0",
    "wandb>=0.27.0",
]

[project.scripts]
train = "project_name.train:train"

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "snakeviz>=2.2.2",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.0.2",
    "pytest-timeout>=2.4.0",
    "google-cloud-aiplatform>=1.154.0",
]
# Local ops/serving extras (frontend, load testing, drift); not needed in the
# training or API images.
serving = [
    "streamlit>=1.40.0",
    "locust>=2.32.0",
    "evidently>=0.4,<0.7",  # stable Report/DataDriftPreset API
    "bentoml>=1.2,<2",      # specialized ML deployment (M25)
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = [
    "tests/*",
    "/tmp/*",
    "*/_remote_module_non_scriptable.py",
    "*/evaluate.py",
    "*/train.py",
    "*/visualize.py",
]

[tool.mypy]
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true
