[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv_build]
source-dir = "src"

[project]
name = "scipali"
version = "0.0.1"
description = "a short description"
authors = [
  { name = "Yuxin_Duc", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "datasets>=4.8.5",
    "fastapi==0.115.6",
    "gcloud>=0.18.3",
    "google-cloud-storage>=3.10.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "matplotlib>=3.10.9",
    "peft>=0.19.1",
    "rich>=15.0.0",
    "tensorboard>=2.20.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.9.0",
    "typer>=0.16.0",
    "uvicorn==0.34.0",
    "wandb>=0.27.0",
]
# dvc[gs] (data versioning, training image only), pre-commit + snakeviz (dev
# tools) moved out of base so the serving/inference images don't ship them.
# pre-commit + snakeviz stay in the `dev` group; dvc[gs] is in the `data` group.

[project.scripts]
train = "scipali.models.train:train"

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
    "snakeviz>=2.2.2",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.0.2",
    "pytest-timeout>=2.4.0",
    "google-cloud-aiplatform>=1.154.0",
]
# Local ops/serving extras (load testing, drift, BentoML); not needed in the
# training or API images. NOTE: the Streamlit frontend is deliberately NOT here
# — streamlit's Starlette-based server pins a newer `starlette` than FastAPI
# does, so they can't share one env. frontend.py imports no project code, so it
# is launched standalone via `uvx` instead (see docs/source/usage.md).
serving = [
    "locust>=2.32.0",
    "evidently>=0.4,<0.7",  # stable Report/DataDriftPreset API
    "bentoml>=1.2,<2",      # specialized ML deployment
    "google-cloud-logging>=3.0",  # drift `collect`: read /predict logs
]
# Drift detection (/monitor/drift) + Prometheus metrics (/metrics) in the
# deployed API. Synced into the API image (api.dockerfile --group monitoring),
# without the heavier frontend/load-test extras.
monitoring = [
    "evidently>=0.4,<0.7",
    "prometheus-fastapi-instrumentator>=7.0,<8",  # /metrics instrumentation
]
# Data versioning (dvc + GCS remote). Only the training image needs the dvc CLI
# (build-time `dvc config` + runtime `dvc pull`); kept out of base so api/predict
# stay lean. train.dockerfile installs it via `--group data`.
data = [
    "dvc[gs]>=3.67.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = [
    "tests/*",
    "/tmp/*",
    "*/_remote_module_non_scriptable.py",
    "*/evaluate.py",
    "*/train.py",
    "*/visualize.py",
]

[tool.mypy]
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true
